--- a/client/index.html
+++ b/client/index.html
@@ -1,18 +1,13 @@
 <!doctype html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="apple-touch-icon" href="/logo-512.png" />
-    <link rel="manifest" href="/manifest.json" />
-    <meta name="description" content="MiniDSP Remote" />
-    <title>MiniDSP Remote</title>
-</head>
-
-<body>
-    <div id="root"></div>
-    <script type="module" src="/src/index.tsx"></script>
-</body>
-
+    <head>
+        <meta charset="UTF-8" />
+        <link rel="icon" type="image/svg+xml" href="/logo-512.png" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>MiniDSP Remote</title>
+    </head>
+    <body>
+        <div id="root"></div>
+        <script type="module" src="/src/main.tsx"></script>
+    </body>
 </html>
